--- a/PROYECTO CODIGO JAVA/proyecto/proyecto/src/main/java/CapaPresentacion/FrmModulo_Principal.form
+++ b/PROYECTO CODIGO JAVA/proyecto/proyecto/src/main/java/CapaPresentacion/FrmModulo_Principal.form
@@ -58,7 +58,7 @@
       <Layout>
         <DimensionLayout dim="0">
           <Group type="103" groupAlignment="0" attributes="0">
-              <Group type="102" alignment="1" attributes="0">
+              <Group type="102" attributes="0">
                   <EmptySpace max="32767" attributes="0"/>
                   <Group type="103" groupAlignment="0" max="-2" attributes="0">
                       <Component id="jPanel5" max="32767" attributes="0"/>
